[gd_scene load_steps=3 format=3 uid="uid://ddgy0akvaiig3"]

[ext_resource type="PackedScene" uid="uid://yxpoegnyjx62" path="res://SlotMachine/slot_machine_clean.tscn" id="1_slot"]
[ext_resource type="Script" path="res://SlotMachine/slot_machine_example.gd" id="2_script"]

[node name="SlotMachineExample" type="Node2D"]
script = ExtResource("2_script")

[node name="SlotMachine" parent="." instance=ExtResource("1_slot")]

[node name="SpinButton" type="Button" parent="."]
offset_left = -191.0
offset_top = 84.0
offset_right = 196.0
offset_bottom = 191.0
text = "Spin"

[node name="ResultLabel" type="Label" parent="."]
offset_left = 239.0
offset_top = 57.0
offset_right = 535.0
offset_bottom = 226.0
text = "Нажмите кнопку для игры"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-2, -1)

[connection signal="pressed" from="SpinButton" to="." method="_on_spin_button_pressed"]
